# hxo

./: .gitignore  bunfig.toml  package.json  tsconfig.json
.beads/: issues.jsonl
examples/hello-ffi/: main.ts
native/: CMakeLists.txt
native/include/: engine.h
native/shaders/: triangle.vert
native/src/: engine.cpp
scripts/: build-native.sh  dev.sh
src/: index.ts
src/engine/: Engine.ts
src/ffi/: Bridge.ts  types.ts
